# mofa-studio

./: .gitignore  CHECKLIST.md  Cargo.toml  DEPLOY_WITH_NIX.md  MOFA_DORA_ARCHITECTURE.md  README.md  flake.nix  mofa-studio-dora-integration-checklist.md  pixi.toml  run-mofa-studio.sh  run.sh
apps/mofa-asr/: Cargo.toml  DEVPLAN.md  README.md
apps/mofa-asr/dataflow/: asr-dual.yml  asr-dynamic.yml  asr-mlx.yml  asr-nano-mlx.yml
apps/mofa-asr/src/: dora_integration.rs  lib.rs
apps/mofa-asr/src/screen/: design.rs  log_panel.rs  mod.rs
apps/mofa-debate/: Cargo.toml
apps/mofa-debate/dataflow/: debate_config_con.toml  debate_config_judge.toml  debate_config_pro.toml  maas_config.toml  study_config_student1.toml  study_config_student2.toml  study_config_tutor.toml  voice-chat.yml
apps/mofa-debate/src/: audio.rs  audio_player.rs  dora_integration.rs  lib.rs  log_bridge.rs  mofa_hero.rs  system_monitor.rs
apps/mofa-debate/src/screen/: audio_controls.rs  chat_panel.rs  design.rs  dora_handlers.rs  log_panel.rs  mod.rs
apps/mofa-fm/: Cargo.toml
apps/mofa-fm/dataflow/: DORA_STOP_HANG_ANALYSIS.md  POLICY.md  maas_config.toml  study_config_tutor.toml  test_nvidia.yml  test_nvidia_config.toml  test_nvidia_source.py  voice-chat-funasr-nano-mlx.yml  voice-chat-mlx.yml  voice-chat-nano-mlx.yml  voice-chat.yml
apps/mofa-fm/src/: audio_player.rs  dora_integration.rs  lib.rs  mofa_hero.rs  system_monitor.rs
apps/mofa-fm/src/screen/: audio_controls.rs  chat_panel.rs  design.rs  dora_handlers.rs  log_panel.rs  mod.rs  role_config.rs
apps/mofa-settings/src/: add_provider_modal.rs  lib.rs  provider_view.rs  providers_panel.rs  screen.rs
apps/mofa-settings/src/data/: mod.rs  preferences.rs  providers.rs
apps/mofa-test-app/: Cargo.toml
apps/mofa-test-app/src/: main.rs
doc/: APP_DEVELOPMENT_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOY_WITH_NIX.md  MOFA_DORA_INTEGRATION_PLAN.md  MOFA_FM_COMPARISON_ANALYSIS.md  SHARED_COMPONENTS_ARCHITECTURE.md  STATE_MANAGEMENT_ANALYSIS.md  TIMER_USAGE_ANALYSIS.md  codereview-codex.md  mofa-studio-dora-integration-checklist.md  roadmap-claude.md  roadmap-glm.md  roadmap-m2.md  架构指南.md
models/setup-local-models/primespeech-validation/: benchmark_fewshot.py  benchmark_rigorous.py
mofa-dora-bridge/: Cargo.toml
mofa-dora-bridge/src/: bridge.rs  controller.rs  data.rs  dispatcher.rs  lib.rs  parser.rs  shared_state.rs
mofa-dora-bridge/src/widgets/: aec_input.rs  audio_player.rs  mod.rs  prompt_input.rs  system_log.rs
mofa-studio-shell/: Cargo.toml
mofa-studio-shell/src/: app.rs  cli.rs  lib.rs  main.rs
mofa-studio-shell/src/widgets/: dashboard.rs  mod.rs  mofa_hero.rs  sidebar.rs
mofa-ui/: Cargo.toml
mofa-ui/src/: app_data.rs  lib.rs  registry.rs  theme.rs  traits.rs
mofa-ui/src/shell/: header.rs  layout.rs  mod.rs  sidebar.rs  status_bar.rs
mofa-ui/src/widgets/: chat_input.rs  chat_panel.rs  dataflow_picker.rs  led_meter.rs  log_panel.rs  mod.rs  provider_selector.rs  role_editor.rs
mofa-widgets/: WIDGET_GUIDE.md
mofa-widgets/src/: app_trait.rs  lib.rs  participant_panel.rs  waveform_view.rs
node-hub/dora-conference-bridge/: Cargo.toml
node-hub/dora-conference-controller/: Cargo.toml
node-hub/dora-conference-controller/dora-conference-bridge/: Cargo.toml
node-hub/dora-conference-controller/src/: main.rs
node-hub/dora-conference-controller/src/policies/: unified_ratio.rs
node-hub/dora-funasr-mlx/: Cargo.toml  README.md
node-hub/dora-funasr-mlx/dataflow/: audio_source.py  test-asr-mlx.yml
node-hub/dora-funasr-mlx/scripts/: download_models.sh
node-hub/dora-funasr-mlx/src/: config.rs  main.rs
node-hub/dora-funasr-mlx/src/engines/: mod.rs  paraformer.rs
node-hub/dora-funasr-nano-mlx/: Cargo.toml  README.md
node-hub/dora-funasr-nano-mlx/dataflow/: test-funasr-nano-mlx.yml
node-hub/dora-funasr-nano-mlx/scripts/: download_models.sh
node-hub/dora-funasr-nano-mlx/src/: config.rs  engine.rs  main.rs
node-hub/dora-gpt-sovits-mlx/: Cargo.toml
node-hub/dora-gpt-sovits-mlx/dataflow/: audio_sink.py  test-tts.yml  text_source.py
node-hub/dora-gpt-sovits-mlx/doc/: SSML.md
node-hub/dora-gpt-sovits-mlx/src/: config.rs  main.rs  ssml.rs
node-hub/dora-maas-client/: Cargo.toml
node-hub/dora-primespeech/: TODO.md
node-hub/dora-primespeech/dora_primespeech/: compare_phonemes.py  config.py  moyoyo_tts_wrapper_streaming_fix.py
node-hub/dora-primespeech/dora_primespeech/moyoyo_tts/AR/models/: t2s_model.py
node-hub/dora-primespeech/dora_primespeech/moyoyo_tts/AR/modules/: patched_mha_with_cache.py
node-hub/dora-primespeech/dora_primespeech/moyoyo_tts/text/: compare_phonemes_direct.py
node-hub/dora-primespeech/dora_primespeech/moyoyo_tts/text/g2pw/: polyphonic.pickle
node-hub/dora-primespeech/moyoyo_tts/configs/: tts_infer.yaml
node-hub/dora-step-audio2-mlx/: Cargo.toml
node-hub/dora-step-audio2-mlx/dataflow/: audio_source.py  test-step-audio2.yml
node-hub/dora-step-audio2-mlx/src/: config.rs  engine.rs  main.rs
scripts/: activate.sh
