[package]
name = "mofa-studio-shell"
version.workspace = true
edition.workspace = true

[features]
default = ["mofa-fm", "mofa-settings", "mofa-debate"]
mofa-fm = ["dep:mofa-fm"]
mofa-settings = ["dep:mofa-settings"]
mofa-debate = ["dep:mofa-debate"]

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../mofa-widgets" }
mofa-fm = { path = "../apps/mofa-fm", optional = true }
mofa-settings = { path = "../apps/mofa-settings", optional = true }
mofa-debate = { path = "../apps/mofa-debate", optional = true }

# Audio
cpal.workspace = true

# Async runtime
tokio.workspace = true

# Utilities
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
dirs.workspace = true
sysinfo = "0.32"
ctrlc = "3.4"

[[bin]]
name = "mofa-studio"
path = "src/main.rs"
