[package]
name = "mofa-debate"
version.workspace = true
edition.workspace = true

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../../mofa-widgets" }
mofa-dora-bridge = { path = "../../mofa-dora-bridge" }
mofa-settings = { path = "../mofa-settings" }
parking_lot.workspace = true
log.workspace = true
sysinfo.workspace = true
cpal.workspace = true
crossbeam-channel.workspace = true
serde_json.workspace = true
once_cell = "1.19"
# nvml-wrapper = "0.10"  # Uncomment for NVIDIA GPU support on Linux/Windows
