[package]
name = "mofa-test-app"
version = "0.1.0"
edition = "2021"
description = "Test application to validate mofa-ui components"

[dependencies]
makepad-widgets.workspace = true
mofa-widgets = { path = "../../mofa-widgets" }
mofa-ui = { path = "../../mofa-ui" }
mofa-dora-bridge = { path = "../../mofa-dora-bridge" }
log.workspace = true
