[package]
name = "dora-funasr-mlx"
version = "0.1.0"
edition = "2021"
authors = ["MoFA Contributors"]
description = "MLX-based ASR node for Dora using FunASR Paraformer (Apple Silicon optimized)"
license = "Apache-2.0"

# Keep this package out of the parent workspace (has external MLX dependencies)
[workspace]

[dependencies]
# Dora framework
dora-node-api = { version = "0.4.1", features = ["tracing"] }
eyre = "0.6"

# MLX ASR engine (Paraformer) - local path dependency
funasr-mlx = { git = "https://github.com/OminiX-ai/OminiX-MLX", branch = "main", features = ["punctuation"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
dirs-next = "2"

[[bin]]
name = "dora-funasr-mlx"
path = "src/main.rs"
