[package]
name = "dora-gpt-sovits-mlx"
version = "0.1.0"
edition = "2021"
authors = ["MoFA Contributors"]
description = "MLX-based TTS node for Dora using GPT-SoVITS (Apple Silicon optimized)"
license = "Apache-2.0"

# Keep this package out of the parent workspace (has external MLX dependencies)
[workspace]

[dependencies]
# Dora framework
dora-node-api = { version = "0.4.1", features = ["tracing"] }
eyre = "0.6"

# MLX TTS engine (GPT-SoVITS) - local path dependency
gpt-sovits-mlx = { path = "../../../OminiX-MLX/gpt-sovits-mlx" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
dirs-next = "2"

[[bin]]
name = "dora-gpt-sovits-mlx"
path = "src/main.rs"
